Color shifting (amber, blue, gray) on video (wr-sw)
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | fixed |
People
(Reporter: yoasif, Assigned: lsalzman)
References
(Regression, )
Details
(Keywords: nightly-community, regression)
Attachments
(4 files)
Visit: https://twitter.com/genericdemocrat/status/1329224796048134160
What happens: shifting colors on video
14:08.53 INFO: Narrowed integration regression window from [b9aa322c, 6d5a7637] (3 builds) to [b9aa322c, 5e315caa] (2 builds) (~1 steps left)
14:08.54 INFO: No more integration revisions, bisection finished.
14:08.54 INFO: Last good revision: b9aa322c7e11ee52c0079401621b858d4bbb4701
14:08.54 INFO: First bad revision: 5e315caacc2730e114a86f32272e4f7d289ef19d
14:08.55 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b9aa322c7e11ee52c0079401621b858d4bbb4701&tochange=5e315caacc2730e114a86f32272e4f7d289ef19d
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
The SWGL fast-paths operate in terms of UVs that have already been quantized.
The quantized ivec2s were getting silently converted back to vec2s which were
then re-quantized inside the planar texture lookups. The quantization has been
moved as such to only now happen in the normal vec4 result paths as it should
have been in the first place, and the conversion constructor has been made
explicit to avoid this oversight in the future.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1675990
| Assignee | ||
Comment 5•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/065da45c990f
https://hg.mozilla.org/mozilla-central/rev/e5a5332c48a4
Description
•