Bug 1678192 - don't quantize UVs in planar texture lookups. r=jrmuizel

The SWGL fast-paths operate in terms of UVs that have already been quantized.
The quantized ivec2s were getting silently converted back to vec2s which were
then re-quantized inside the planar texture lookups. The quantization has been
moved as such to only now happen in the normal vec4 result paths as it should
have been in the first place, and the conversion constructor has been made
explicit to avoid this oversight in the future.

Differential Revision: https://phabricator.services.mozilla.com/D97539